# xcodec2-ggml

./: .gitignore  CMakeLists.txt  README.md  export_ggml.py  export_gguf.py  main.cpp  quantize.cpp  server.cpp  xcodec2.c  xcodec2.h  xcodec2_graph.c  xcodec2_load.c
